# multisets

./: CMakeLists.txt  README.md  input.txt
common/: CMakeLists.txt  err.c  err.h  io.c  io.h  sumset.h
nonrecursive/: CMakeLists.txt  main.c
parallel/: CMakeLists.txt  main.c
reference/: CMakeLists.txt  main.c
